# swarm-forge

./: .gitignore  ABLATION_PLAN.md  ABSTRACT.md  AUTONOMY_GUARDRAILS_PROTOCOL.md  CITATION.cff  DATASET_GENERALIZATION_BLOCKER.md  EXPERIMENT_REGISTRY.md  GPU_FOCUSED_SEARCH.ps1  LICENSE  README.md  RELEASE_FREEZE_1.5932.md  REPRODUCIBILITY.md  RESULTS.md  ROADMAP.md  SECOND_DATASET_PROTOCOL.md  TINYSHAKESPEARE_STATUS.md  TINYSHKESPEARE_BASELINES.md  VERIFY_BEST_TINYSHAKESPEARE.ps1  WIKITEXT2_BASELINE.md  pyproject.toml  requirements.txt  swarm_forge.py
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
docs/datasets/: MIGRATION_PLAN.md
docs/experiments/: OPENWEBTEXT_BASELINE_200_REPORT.md  OPENWEBTEXT_SMOKE_REPORT.md
docs/experiments/camp-extensive-grid-20260319/: PLAN.md  plan.json  results.jsonl
scripts/: reproduce-tinyshakespeare-reference.ps1  run-wikitext2-sweep.ps1
swarm_forge/: __init__.py  agents.py  common.py  config.py  contracts.py  core.py  data.py  engine.py  patch_applier.py  patches.py  proposals.py  research.py  search.py
tests/: conftest.py  test_cli_module.py  test_config_and_cli.py  test_lifecycle.py  test_module_boundaries.py  test_research.py  test_rollback.py  test_search.py  test_smoke.py  test_voting.py
