[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-forge"
version = "1.0.0"
description = "Competitive multi-agent patch governance for nanoGPT experimentation, built around correctness, rollback safety, and auditability."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Oscar Fuentes", email = "crasofuentes@gmail.com" }
]
keywords = [
  "multi-agent",
  "nanogpt",
  "pytorch",
  "ray",
  "auditability",
  "reproducibility",
  "ml-systems",
  "governance"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Testing"
]
dependencies = [
  "torch>=2.3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0"
]
ray = [
  "ray[default]>=2.20.0"
]

[project.urls]
Homepage = "https://github.com/crasofuentes-hub/swarm-forge"
Repository = "https://github.com/crasofuentes-hub/swarm-forge"
Issues = "https://github.com/crasofuentes-hub/swarm-forge/issues"

[project.scripts]
swarm-forge = "swarm_forge.core:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["swarm_forge*"]
exclude = ["tests*", "runs*", "data*"]